2008-08-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-05
	* another lil fix to offline2online

2008-08-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-04
	* fixes to offline2online conversion procedure, reported by Andre.

2008-08-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

        * tag V00-25-03
	* undo changes to V00-25-02
        
	* tag V00-25-02
	* OutputModuleDialog: add 'keep triggerTriggerEventWithRefs' to
	the standard value of the outputCommands parameter of any output
	module (requested by MZ).

2008-08-04  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-01
	* fix confdb.db.ConfDB::removeConfiguration(), remove streams &
	datasets as well.

2008-07-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-00
	* add offline->online conversions to
	OnlineConverter::convertConfiguration():
	  - PoolSource to DAQSource (was there already)
	  - PoolOutputModule to ShmStreamConsure (was there already)
	  - set MessageLogger configuration for online
	  - configure essource GlobalTag for online
	  - configure global pset 'options' for online
	  - remove global pset maxEvents for online
	  - add services DQMStore and FUDQMOuputService for online
	  - set all InputTag / string type parameters with value
	    "rawDataCollector" to "source"
	* add OnlineConverter::setMessageLoggerVerbosity()
	* add OnlineConverter::setGlobalTag()
	* add OnlineConverter::setConnect()

2008-07-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-24-06
	* latest webserver developments from Ulf
	* add 'runOnlineConverter' script, and some slight improvements to
	OnlineConverter::main.

2008-07-09  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-24-05
	* fix bug reported by Tulika and Bryan: freshly loaded datasets
	would appear to have been 'changed'.
	* pick up latest developments by Ulf regarding web & converter
